# discovering-modern-cpp

./: .gitignore  README.md  temas_importantes.txt
ch_01/1.1_hello/: CMakeLists.txt  Hello  compile_commands.json  main.cpp  run  test.sh
ch_01/1.2_variables/: CMakeLists.txt  build.sh  compile_commands.json  main.cpp  run  variables
ch_01/1.3_arrays/: CMakeLists.txt  main.cpp  run
ch_02/2.3.3/: CMakeLists.txt  build.sh  compile_commands.json  initializer  main.cpp  run  vector.h
ch_02/a.4.1/: CMakeLists.txt  main.cpp  run
ch_02/copy_elision/: CMakeLists.txt  main.cpp  run
ch_03/deduction/: CMakeLists.txt  funciones.h  main.cpp  run
ch_03/errors/: CMakeLists.txt  main.cpp  run
